examples/c/error-codes/undefined/UB-TDL5-bad-static.output
UB-TDL5-bad-static.c:4:11: error: definition of variable with array type needs an explicit size or an initializer
      int a[];
          ^
1 error generated.
